FIX(index and style) - Contrast issue blockquote

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
 
 blockquote {
     border: none;
+    color: #333333;
 }
 
 
